fix width in media admin file upload (horizontal scrollbar in Firefox)

--- a/mediacore/public/admin/styles/squeezebox.css
+++ b/mediacore/public/admin/styles/squeezebox.css
@@ -110,7 +110,7 @@
 	margin-bottom: 0;
 }
 #sbox-content .box-wide .box-content {
-	width: 798px;
+	width: 780px;
 	background-image: url('../images/layout/sbox-wide-content.png');
 }
 #sbox-content table.box-content {
